--- a/index.html
+++ b/index.html
@@ -244,15 +244,11 @@
             <h2 class="reflection-title">Final Reflection</h2>
             <div class="reflection-content">
                 <p>
-                    這一學期的網頁設計課程讓我收穫良多。從一開始對 HTML 和 CSS 標籤感到陌生，到現在能夠獨立切版並完成響應式網頁，中間經歷了無數次的 Debug 和卡關。
+                    這一學期的網頁設計課程讓我收穫良多。從一開始對 HTML 和 CSS 標籤感到陌生，到現在能運用AI協作製作網站，也了解何謂好的網站。
                 </p>
                 <br>
                 <p>
-                    最讓我印象深刻的是在製作「期末專題」時，為了實現特殊的互動效果，我花了整整三天研究 JavaScript 的事件監聽，雖然過程痛苦，但看到成品動起來的那一刻，成就感真的無可取代。
-                </p>
-                <br>
-                <p>
-                    未來我希望能夠繼續深入學習前端框架，並嘗試結合後端技術，讓網站不只是靜態的展示，而是能真正解決問題的工具。感謝老師的指導與同學的互助，這是一段非常充實的學習旅程！
+                    未來我希望能夠繼續深入學習前端框架，並嘗試結合後端技術，甚至學習UI,UX相關知識，讓網站不只是靜態的展示，而是能符合需求且真正解決問題的工具。感謝老師的指導與同學的互助，這是一段非常充實的學習旅程！
                 </p>
             </div>
         </section>
@@ -263,7 +259,7 @@
         <div class="footer-content">
             <div class="footer-contact">
                 <h3>Contact</h3>
-                <p>電話: 09123456789</p>
+                <p>Github:chiaolin2342.github.io</p>
                 <p>Gmail: <a href="mailto:jolin541204@gmail.com">jolin541204@gmail.com</a></p>
                 <p>就讀系所<br>國立台北教育大學數位設計系</p>
             </div>
@@ -271,13 +267,13 @@
             <div class="footer-links">
                 <h3>Link</h3>
                 <div class="social-icons">
-                    <a href="https://www.facebook.com/" target="_blank" aria-label="Facebook">
+                    <a href="https://www.facebook.com/a.jiu.469993/" target="_blank" aria-label="Facebook">
                         <img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/facebook.svg" alt="Facebook" />
                     </a>
-                    <a href="https://www.instagram.com/" target="_blank" aria-label="Instagram">
+                    <a href="https://www.instagram.com/rin_jolin/" target="_blank" aria-label="Instagram">
                         <img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/instagram.svg" alt="Instagram" />
                     </a>
-                    <a href="https://www.youtube.com/" target="_blank" aria-label="YouTube">
+                    <a href="https://www.youtube.com/@rumex5898" target="_blank" aria-label="YouTube">
                         <img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/youtube.svg" alt="YouTube" />
                     </a>
                 </div>
